frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-analyst
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: movie-analyst
        tier: frontend
        track: stable
    spec:
      containers:
      - name: movie-analyst-ui
        image: caroarbiza/movie-frontend:latest
        ports:
        - containerPort: 80
