frontend/service.yml
apiVersion: v1
kind: Service
metadata:
        name: frontend
spec:
        type: NodePort
        selector:
                app: movie-analyst
                tier: frontend
        ports:
                - protocol: TCP
                  port: 80
                  targetPort: 80
                  nodePort: 30036
