frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rampup-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: rampup-example
  rules:
  - host: frontend-lb-98f002c1cb511991.elb.us-east-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 30036
